--- a/src/App.scss
+++ b/src/App.scss
@@ -9,8 +9,6 @@ body{
 
 .trello{
   height: 100vh;
-  display: grid;
-  grid-template-rows: 40px 50px 1fr;
   background-color: $board-bg-color;
-
+  overflow: hidden;
 }
