--- a/src/components/BoarBar/BoarBar.scss
+++ b/src/components/BoarBar/BoarBar.scss
@@ -1,6 +1,7 @@
 @import './../../setting';
 
-.navabr-board{
+.navbar-board{
+    height: $navbar-board-height;
     padding-left: $gap;
     display: flex;
     align-items: center;
