--- a/src/_setting.scss
+++ b/src/_setting.scss
@@ -10,6 +10,13 @@ $column-footer-height: 36px;
 $column-border-radius: 5px;
 $card-border-radius: 4px;
 
+//height
+$navbar-app-height: 5vh;
+$navbar-board-height: 6vh;
+$board-content-height: 88vh;
+
+
+
 //Screen
 $screen-lg: 1201px;
 $screen-md: 992px;
