--- a/src/components/BoardContent/BoardContent.scss
+++ b/src/components/BoardContent/BoardContent.scss
@@ -1,9 +1,10 @@
 @import './../../setting';
 
 .board-columns{
-    display: flex;
-    margin: 0 $gap $gap;
+    height: $board-content-height;
     overflow-x: auto;
+    overflow-y: hidden;
+
     &::-webkit-scrollbar{
       -webkit-appearance: none;
     }
@@ -16,4 +17,10 @@
       background-color: $common-element-bg;
       border-radius: 8px;
     }
-  }
+
+    .cards-drop-preview{
+      background-color: rgba(150, 150, 150, 0.1);
+      border: 1px dashed #abc;
+      margin: 5px 45px 5px 5px;
+    }
+}
