--- a/src/_setting.scss
+++ b/src/_setting.scss
@@ -1,6 +1,9 @@
 @import url(https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600);
 
 $gap: 10px;
+
+//color
+$app-main-text-color: #333;
 $board-bg-color: #0079bf;
 $common-element-bg: rgba(255,255,255,0.24);
 $list-bg-color: #ebecf0;
