--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -9,7 +9,6 @@ $column-height: calc(#{$board-content-height} - #{$gap * 2});
       margin-left: $gap;
       > * {
         background-color: $list-bg-color;
-        color: #333;
         padding: 0 8px;
       }
 
@@ -30,6 +29,11 @@ $column-height: calc(#{$board-content-height} - #{$gap * 2});
         line-height: $column-footer-height;
         border-bottom-left-radius: $column-border-radius;
         border-bottom-right-radius: $column-border-radius;
+        color: #888;
+        .footer-action{
+          margin-left: $gap;
+          cursor: pointer;
+        }
       }
 
   .card-list{
@@ -53,11 +57,13 @@ $column-height: calc(#{$board-content-height} - #{$gap * 2});
     .card-ghost {
       transition: transform 0.18s ease;
       transform: rotateZ(5deg);
+      font-weight: bold;
     }
 
     .card-ghost-drop{
       transition: transform 0.18s ease-in-out;
       transform: rotateZ(0deg);
+      font-weight: bold;
     }
 
     .drop-preview{
