--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import './setting';
+@import '~bootstrap/scss/bootstrap';
 
 body{
   margin: 0;
@@ -12,4 +13,34 @@ body{
   background-color: $board-bg-color;
   overflow: hidden;
   color: $app-main-text-color;
+
+  .icon{
+    font-size: 14px;
+    margin: 0 3px;
+  }
+
+  .trello-container{
+    margin: 0 15px;
+    padding: 0;
+  }
+
+  textarea:focus, 
+  textarea.form-control:focus, 
+  input.form-control:focus, 
+  input[type=text]:focus, 
+  input[type=password]:focus, 
+  input[type=email]:focus, 
+  input[type=number]:focus, 
+  [type=text].form-control:focus, 
+  [type=password].form-control:focus, 
+  [type=email].form-control:focus, 
+  [type=tel].form-control:focus, 
+  [contenteditable].form-control:focus {
+    box-shadow: inset 0 -1px 0 #ddd;
+  }
+
+  .btn:focus, btn:active{
+    outline: none;
+    box-shadow: none;
+  }
 }
