--- a/src/_setting.scss
+++ b/src/_setting.scss
@@ -7,6 +7,7 @@ $app-main-text-color: #333;
 $board-bg-color: #0079bf;
 $common-element-bg: rgba(255,255,255,0.24);
 $list-bg-color: #ebecf0;
+$alert-danger: #ee5253;
 
 $column-header-height: 36px;
 $column-footer-height: 36px;
@@ -26,3 +27,4 @@ $screen-md: 992px;
 $screen-lg: 768px;
 $screen-lg: 480px;
 $screen-ip6-down: '(max-width: 375px)'; 
+
