--- a/src/components/BoardContent/BoardContent.scss
+++ b/src/components/BoardContent/BoardContent.scss
@@ -5,6 +5,10 @@
     height: $board-content-height;
     overflow-x: auto;
     overflow-y: hidden;
+    &::after{
+      content: '';
+      flex: 0 0 $gap;
+    }
 
     &::-webkit-scrollbar{
       -webkit-appearance: none;
@@ -27,7 +31,8 @@
 
     .add-new-column{
       width: 250px;
-      height: 32px;
+      max-width: 250px;
+      // height: 32px;
       line-height: 32px;
       padding: 4px 0 4px 15px;
       cursor: pointer;
@@ -35,9 +40,36 @@
       margin-left: $gap;
       font-size: 15px;
       background-color: hsla(0, 0%, 100%, .24);
-      border-radius: 5px;
+      border-radius: $column-border-radius;
       &:hover{
         background-color: hsla(0, 0%, 100%, .34);
+      }
+    }
+
+    .enter-new-column{
+      width: 250px;
+      max-width: 250px;
+      background-color: $list-bg-color;
+      line-height: 32px;
+      padding: 4px 7px;
+      margin-left: $gap;
+      border-radius: $column-border-radius;
+      outline: none;
+
+      input.input-enter-new-column{
+        margin-top: 5px 0;
+      }
+
+      span.cancel-new-column{
+        margin-left: 10px;
+        cursor: pointer;
+        i{
+          font-size: 18px;
+          color: $alert-danger;
+          &:hover{
+            color: darken($alert-danger, 10);
+          }
+        }
       }
     }
 }
