--- a/src/App.scss
+++ b/src/App.scss
@@ -40,7 +40,19 @@ body{
   }
 
   .btn:focus, btn:active{
-    outline: none;
-    box-shadow: none;
+    outline: none !important;
+    box-shadow: none !important;
+  }
+
+  .content-edit{
+    background-color: inherit;
+    border: none;
+    font-size: inherit;
+    font-weight: inherit;
+    cursor: pointer;
+    &:focus{
+      background-color: white;
+      border: 1px solid $board-bg-color;
+    }
   }
 }
