--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -13,15 +13,68 @@ $column-height: calc(#{$board-content-height} - #{$gap * 2});
       }
 
     header.column-drag-handle{
-      padding-left: 15px;
-      height: $column-header-height;
+      padding: 5px 8px;
+      // height: $column-header-height;
       line-height: $column-header-height;
       font-size: 16px;
-        font-weight: bold;
-        border-top-left-radius: $column-border-radius;
-        border-top-right-radius: $column-border-radius;
-        cursor: pointer;
+      font-weight: bold;
+      border-top-left-radius: $column-border-radius;
+      border-top-right-radius: $column-border-radius;
+      cursor: pointer;
+      display: flex;
+
+      .column-title{
+        flex: 90%;
       }
+
+      .column-dropdown-actions{
+        flex: 10%;
+       .dropdown{
+         button.dropdown-btn{
+          padding: 0 $gap;
+          font-size: 16px;
+          height: 32px;
+          margin-top: -9px;
+          font-weight: bold;
+          letter-spacing: 1px;
+          background-color: $list-bg-color;
+          border-color: $list-bg-color;
+          color: $app-main-text-color;
+
+          &:after{
+            content: '...';
+            border: none;
+          }
+
+          &:hover{
+            background-color:  darken($list-bg-color, 10);
+            border-color: $list-bg-color;
+          }
+        }
+       }
+
+        .dropdown-menu{
+          padding: 0;
+          min-width: 200px;
+
+          a.dropdown-item{
+            padding: 0.1rem 1rem;
+            font-size: 14px;
+            &:not(:last-child){
+              border-bottom: 1px solid darken($list-bg-color, 10);
+            }
+
+            &:hover{
+              border-top-left-radius: 5px;
+              border-bottom-left-radius: 5px;
+              border-top-right-radius: 5px;
+              border-bottom-right-radius: 5px;
+            }
+          }
+        }
+      }
+
+    }
 
     footer{
         padding-left: $gap;
